# Display-Panel-CYD

./: README.md
00-LVGL-Hello-World/: platformio.ini
00-LVGL-Hello-World/include/: lv_conf.h
00-LVGL-Hello-World/src/: main.cpp
01-LCARS-UI/PIO/: platformio.ini
01-LCARS-UI/PIO/include/: lv_conf.h
01-LCARS-UI/PIO/lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
01-LCARS-UI/PIO/lib/ui/src/components/: ui_comp_hook.c
01-LCARS-UI/PIO/lib/ui/src/fonts/: ui_font_OB20.c  ui_font_OB30.c
01-LCARS-UI/PIO/lib/ui/src/images/: ui_img_1076175045.c  ui_img_1179592870.c  ui_img_1289941709.c  ui_img_1533239920.c  ui_img_1711947617.c  ui_img_2033645247.c  ui_img_208212530.c  ui_img_2110701303.c  ui_img_348229245.c  ui_img_348234618.c  ui_img_451510741.c  ui_img_630218438.c  ui_img_951916068.c  ui_img_images_01_sp0_png.c  ui_img_images_01_sp10_png.c  ui_img_images_01_sp11_png.c  ui_img_images_01_sp12_png.c  ui_img_images_01_sp13_png.c  ui_img_images_01_sp14_png.c  ui_img_images_01_sp15_png.c  ui_img_images_01_sp16_png.c  ui_img_images_01_sp17_png.c  ui_img_images_01_sp18_png.c  ui_img_images_01_sp19_png.c  ui_img_images_01_sp1_png.c  ui_img_images_01_sp20_png.c  ui_img_images_01_sp21_png.c  ui_img_images_01_sp22_png.c  ui_img_images_01_sp23_png.c  ui_img_images_01_sp24_png.c  ui_img_images_01_sp25_png.c  ui_img_images_01_sp26_png.c  ui_img_images_01_sp27_png.c  ui_img_images_01_sp28_png.c  ui_img_images_01_sp29_png.c  ui_img_images_01_sp2_png.c  ui_img_images_01_sp30_png.c  ui_img_images_01_sp3_png.c  ui_img_images_01_sp4_png.c  ui_img_images_01_sp5_png.c  (+10 more)
01-LCARS-UI/PIO/lib/ui/src/screens/: ui_Screen1.c  ui_Screen2.c
01-LCARS-UI/PIO/src/: main.cpp  sp_image_set.txt
01-LCARS-UI/SLS/: lcars-ui.sll  lcars-ui.spj  lcars-ui_events.py
01-LCARS-UI/SLS/assets/Fonts/: ui_font_OB15.c  ui_font_OB15.fcfg  ui_font_OB20.fcfg  ui_font_OB30.fcfg  ui_font_OB40.c  ui_font_OB40.fcfg
02-Coffee-vending/PIO/include/: lv_conf.h
02-Coffee-vending/PIO/lib/ui/src/: ui.c  (+5 more)
02-Coffee-vending/PIO/src/: main.cpp
02-Coffee-vending/SLS/: Coffee wending.sll  Coffee wending.spj  Coffee wending_events.py
02-Coffee-vending/SLS/Template/Coffee wending/: README.md  platformio.ini
(+36 files in other folders)
