SET(SOURCES screens/ui_Screen1.c
    screens/ui_Screen2.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_images_bg_png.c
    images/ui_img_1179592870.c
    images/ui_img_2033645247.c
    images/ui_img_951916068.c
    images/ui_img_1711947617.c
    images/ui_img_451510741.c
    images/ui_img_630218438.c
    images/ui_img_images_rectangle_9_png.c
    images/ui_img_images_grid_png.c
    images/ui_img_images_01_sp0_png.c
    images/ui_img_348234618.c
    images/ui_img_348229245.c
    images/ui_img_images_ellipse_1_png.c
    images/ui_img_images_ellipse_3_png.c
    images/ui_img_images_ellipse_2_png.c
    images/ui_img_2110701303.c
    images/ui_img_images_01_sp1_png.c
    images/ui_img_images_01_sp10_png.c
    images/ui_img_images_01_sp11_png.c
    images/ui_img_images_01_sp12_png.c
    images/ui_img_images_01_sp13_png.c
    images/ui_img_images_01_sp14_png.c
    images/ui_img_images_01_sp15_png.c
    images/ui_img_images_01_sp16_png.c
    images/ui_img_images_01_sp17_png.c
    images/ui_img_images_01_sp18_png.c
    images/ui_img_images_01_sp19_png.c
    images/ui_img_images_01_sp2_png.c
    images/ui_img_images_01_sp20_png.c
    images/ui_img_images_01_sp21_png.c
    images/ui_img_images_01_sp22_png.c
    images/ui_img_images_01_sp23_png.c
    images/ui_img_images_01_sp24_png.c
    images/ui_img_images_01_sp25_png.c
    images/ui_img_images_01_sp26_png.c
    images/ui_img_images_01_sp27_png.c
    images/ui_img_images_01_sp28_png.c
    images/ui_img_images_01_sp29_png.c
    images/ui_img_images_01_sp3_png.c
    images/ui_img_images_01_sp30_png.c
    images/ui_img_images_01_sp4_png.c
    images/ui_img_images_01_sp5_png.c
    images/ui_img_images_01_sp6_png.c
    images/ui_img_images_01_sp7_png.c
    images/ui_img_images_01_sp8_png.c
    images/ui_img_images_01_sp9_png.c
    images/ui_img_1076175045.c
    images/ui_img_1533239920.c
    images/ui_img_1289941709.c
    images/ui_img_208212530.c
    fonts/ui_font_OB15.c
    fonts/ui_font_OB20.c
    fonts/ui_font_OB30.c
    fonts/ui_font_OB40.c)

add_library(ui ${SOURCES})
